force-app/main/default/objects/Faculty__c/Faculty__c.object-meta.xml
<CustomObject>
    <description>A faculty is a division within a university comprising one subject area or a group of related subject areas</description>
    <label>Faculty</label>
    <nameField>
        <label>Faculty Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faculties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>