force-app/main/default/objects/Faculty__c/fields/ActiveDepartments__c.field-meta.xml
<CustomField>
    <fullName>ActiveDepartments__c</fullName>
    <label>Active Departments</label>
    <summaryFilterItems>
        <field>Department__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Department__c.Faculty__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>