force-app/main/default/objects/Faculty__c/fields/Dean__c.field-meta.xml
<CustomField>
    <fullName>Dean__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dean</label>
    <referenceTo>Professor__c</referenceTo>
    <relationshipLabel>Heading Faculties</relationshipLabel>
    <relationshipName>Faculties</relationshipName>
    <type>Lookup</type>
</CustomField>