force-app/main/default/objects/Faculty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FullName__c</columns>
    <columns>Dean__c</columns>
    <columns>ActiveDepartments__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>